--- a/wp-content/themes/bsantana/style.css
+++ b/wp-content/themes/bsantana/style.css
@@ -1,9 +1,9 @@
 /*
 Theme Name: ValerioSouza 2014
-iTheme URI: http://valeriosouza.com.br
+Theme URI: http://valeriosouza.com.br
 Author: valeriosza
 Author URI: http://valeriosouza.com.br
 Description: Template 2014 para o site Valério Souza
 Version: 1.0
 Tags: light, blue, orange, white, two-columns, right-sidebar, fixed-width, custom-background, custom-menu, featured-images, translation-ready, widgets
-*/ 
+*/
