Alterando folha de estilo, name template

--- a/wp-content/themes/bsantana/style.css
+++ b/wp-content/themes/bsantana/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: ValerioSouza 2014
+Theme Name: ValerioSouza 2014 e jfelicio 2017
 Theme URI: http://valeriosouza.com.br
 Author: valeriosza
 Author URI: http://valeriosouza.com.br
